--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,24 +6,4 @@ on:
 
 jobs: 
   create-and-run-wheel: 
-    runs-on: ubuntu-latest
-
-    steps: 
-    - name: Checkout code
-      uses: actions/checkout@v3
-    
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with: 
-        python-version: '3.10'
-        
-    - name: Build wheel
-      run: |
-          pip install wheel
-          python setup.py bdist_wheel
-
-    - name: Installing wheel 
-      run: pip install ./dist/python_calculator-1.0-py3-none-any.whl
-
-    - name: Verify that library is correctly installed
-      run: python ./test/test.py
+    uses: juanzq10dev/workflows/.github/workflows/build-python-wheel.yml@main
