Add necesry input parameter

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,3 +7,5 @@ on:
 jobs: 
   create-and-run-wheel: 
     uses: juanzq10dev/workflows/.github/workflows/build-python-wheel.yml@main
+    with: 
+        wheel-name: hello
